Display command stdout and stderr

--- a/examples/config.toml
+++ b/examples/config.toml
@@ -1,5 +1,6 @@
 commands.date = ["date"]
 commands.touch = ["sh", "-c", "date > /tmp/dashboard"]
 commands.rm = ["rm", "/tmp/dashboard"]
+commands.cat = ["cat", "main.go"]
 watch-mountpoints = ["/"]
 server-root = "static/"
