Implement fmt.Stringer for config commands
and make html paths absolute

--- a/index.template
+++ b/index.template
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <div id="main">
@@ -13,7 +13,7 @@
         <span id="uptime">Uptime: {{ .Uptime }}</span>
       </div>
       <form id="commands" method="post" target="htmz">{{ range .Commands }}
-        <button class="command" formaction="command/{{ . }}#command-output">{{ . }}</button>{{ end }}
+        <button class="command" formaction="/command/{{ . }}#command-output">{{ . }}</button>{{ end }}
       </form>
       {{- if .DisksUsage }}
       <table id="disk-usage">
