Add command execution timeout with 10s default
- adjust disk table
- add ip logging for commands

--- a/examples/config.toml
+++ b/examples/config.toml
@@ -6,9 +6,12 @@
 # mountpoints for which disk usage is displayed
 watch-mountpoints = ["/"]
 
+# command-timeout = "10s"
+
 [commands]
 cat = ["cat", "main.go"]
 date = ["date"]
 rm = ["rm", "/tmp/dashboard"]
 # by default commands are executed wthout shell
 touch = ["sh", "-c", "date > /tmp/dashboard"]
+sleep = ["sh", "-c", "while true; do sleep 1s; echo ok; done"]
