--- a/index.template
+++ b/index.template
@@ -36,12 +36,21 @@
           </tr>{{end}}
         </tbody>
       </table>{{ end }}
+      {{- if .MountsUsers}}
+      <div class="mount-avtivity">
+          {{- range $key, $value := .MountsUsers}}
+          <div class="mount-entry" title="{{if gt (len $value) 0 }}In use{{ else }}Idle{{ end }}">
+            <span>{{ $key }}</span>
+            <div class="mount-status mount-{{if gt (len $value) 0 }}busy{{ else }}idle{{ end }}"></div>
+          </div>
+          {{- end}}
+      </div>
+      {{- end}}
       <pre id="command-output"></pre>
     </div>
     <footer>
       <a href="https://github.com/mtvrsh/dashboard">github.com/mtvrsh/dashboard</a>
     </footer>
-    <iframe hidden name="htmz" onload="window.htmz(this)"></iframe>
     <script>
     function htmz(frame) {
         if (frame.contentWindow.location.href === "about:blank") return;
@@ -54,5 +63,6 @@
         });
       }
     </script>
+    <iframe hidden name="htmz" onload="window.htmz(this)"></iframe>
   </body>
 </html>
